# multi-agent-system

./: .gitignore  README.md  README_STARTER_KIT.md  SPEC.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/approvals/: __init__.py  events.py  exceptions.py  lifecycle.py  policies.py  schemas.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: dependencies.py  logging.py  metrics.py  observability.py
backend/app/demo/: __init__.py  contracts.py  seed.py  user_seed.py  workflow_seed.py
backend/app/exceptions/: __init__.py  handlers.py
backend/app/knowledge/: __init__.py  chunking.py  embeddings.py  exceptions.py  retrieval.py  schemas.py
backend/app/llm/: __init__.py  factory.py  output_parser.py  retry.py  service.py  settings.py  structured_outputs.py
backend/app/middleware/: __init__.py  logging.py  request_id.py
backend/app/repositories/: __init__.py  base.py  crud.py
backend/app/runtime/: __init__.py  graph.py  llm_adapter.py  nodes.py  service.py  state_adapter.py
backend/app/schemas/: __init__.py  workflows_api.py
backend/app/streaming/: __init__.py  contracts.py  redis_pubsub.py  schemas.py
backend/app/tests/: test_approval_contracts.py  test_approval_lifecycle.py  test_approval_policies.py  test_demo_seed_cli.py  test_demo_seed_contracts.py  test_demo_user_seed.py  test_demo_workflow_seed.py  test_event_stream_contracts.py  test_event_stream_redis_pubsub.py  test_event_stream_schemas.py  test_knowledge_api.py  (+29 more)
(+170 files in other folders)
